# rsdns

./: Cargo.toml  README.md  build.rs
src/: bin.rs  lib.rs
src/adapter/: common.rs  context.rs  listener.rs  manager.rs  mod.rs  plugin.rs  time.rs  upstream.rs  workflow.rs
src/common/: canceller.rs  dns.rs  domain.rs  http.rs  ip.rs  listable.rs  mod.rs  serde.rs
src/listener/: handler.rs  listener.rs  listener_base.rs  listener_http.rs  listener_quic.rs  listener_tcp.rs  listener_tls.rs  listener_udp.rs  mod.rs  tls.rs
src/log/: basic.rs  level.rs  logger.rs  macro.rs  mod.rs  nop.rs  tag.rs  test.rs  tracker.rs
src/manager/: api.rs  manager.rs  mod.rs  upstream.rs
src/option/: api.rs  listener.rs  log.rs  mod.rs  plugin.rs  upstream.rs  workflow.rs
src/plugin/: api.rs  mod.rs  plugin.rs
src/plugin/plugin_executor_cache/: mod.rs
src/plugin/plugin_executor_ipset/: mod.rs
src/plugin/plugin_executor_prefer/: mod.rs
src/plugin/plugin_executor_script/: mod.rs
src/plugin/plugin_matcher_domain/: mod.rs
src/plugin/plugin_matcher_ip/: mod.rs
src/plugin/plugin_matcher_maxminddb/: mod.rs
src/plugin/plugin_matcher_script/: mod.rs
src/tests/: listener.rs  mod.rs  test-server-ca.pem  test-server-cert.pem  test-server-key.pem  upstream.rs
src/upstream/: api.rs  bootstrap.rs  mod.rs  pipeline.rs  pool.rs  stream.rs  test.rs  tls.rs  upstream.rs  upstream_dhcp.rs  upstream_https.rs  upstream_quic.rs  upstream_tcp.rs  upstream_tls.rs  upstream_udp.rs
src/upstream/network/: basic.rs  control.rs  dialer.rs  interface.rs  mod.rs  socks5.rs  socksaddr.rs
src/workflow/: exec_rule.rs  match_rule.rs  mod.rs  plugin.rs  rule.rs  workflow.rs
