[package]
name = "rsdns"
version = "0.0.1-alpha.1"
authors = ["yaott"]
description = "a custom dns server"
edition = "2021"

[lib]
name = "rsdns"
path = "src/lib.rs"

[[bin]]
name = "rsdns"
path = "src/bin.rs"

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
base64 = "0.22.0"
bytes = "1.5.0"
cfg-if = "1.0.0"
chrono = "0.4.34"
clap = { version = "4.5.2", features = ["derive"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
dhcproto = "0.11.0"
duration-str = "0.7.1"
futures-util = "0.3.30"
h3 = "0.0.4"
h3-quinn = "0.0.5"
hickory-proto = "0.24.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = [
  "tokio",
  "client",
  "client-legacy",
  "http2",
  "server",
] }
ipaddress = "0.1.3"
ipnet = "2.9.0"
lazy_static = "1.4.0"
libc = "0.2.153"
maxminddb = "0.24.0"
maxminddb-writer = "0.1.0"
network-interface = "1.1.1"
quinn = "0.10.2"
quinn-proto = "0.10.6"
rand = "0.8.5"
redis = { version = "0.25.1", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
regex = "1.10.3"
# tokio-rustls
rustls = { version = "^0.21" }
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
state = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "^0.24" }
tokio-tfo = "0.2.2"
tokio-util = "0.7.10"
tower-http = { version = "0.5.2", features = ["auth", "cors"] }
tower-service = "0.3.2"
webpki-roots = "0.26.1"
winapi = { version = "0.3.9", features = ["winsock2", "ws2def", "ws2ipdef"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = [
  "upstream-dialer-socks5-support",
  "upstream-tls-support",
  "upstream-https-support",
  "upstream-quic-support",
  "upstream-dhcp-support",
  "listener-http-support",
  "listener-tls-support",
  "listener-https-support",
  "listener-quic-support",
  "plugin-matcher-domain",
  "plugin-matcher-ip",
  "plugin-executor-cache",
  "plugin-executor-cache-redis",
  "plugin-executor-prefer",
  "api",
]
upstream-dialer-socks5-support = []
upstream-tls-support = []
upstream-https-support = ["upstream-tls-support"]
upstream-quic-support = ["upstream-tls-support"]
upstream-dhcp-support = []
listener-http-support = []
listener-tls-support = []
listener-https-support = ["listener-http-support", "listener-tls-support"]
listener-quic-support = ["listener-tls-support"]
plugin-matcher-domain = []
plugin-matcher-ip = []
plugin-matcher-maxminddb = []
plugin-executor-cache = []
plugin-executor-cache-redis = ["plugin-executor-cache"]
plugin-executor-prefer = []
api = []
