[package]
name = "rsdns"
version = "0.0.1-alpha.1"
authors = ["yaott"]
description = "a custom dns server"
edition = "2021"

[lib]
name = "rsdns"
path = "src/lib.rs"

[[bin]]
name = "rsdns"
path = "src/bin.rs"

[build-dependencies]
shadow-rs = "0.27.1"

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
base64 = { version = "0.22.0", optional = true }
bytes = "1.5.0"
cfg-if = "1.0.0"
chrono = "0.4.34"
clap = { version = "4.5.2", features = ["derive"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
dhcproto = { version = "0.11.0", optional = true }
duration-str = "0.7.1"
futures-util = "0.3.30"
h3 = { version = "0.0.4", optional = true }
h3-quinn = { version = "0.0.5", optional = true }
hickory-proto = "0.24.0"
http = "1.0.0"
http-body-util = { version = "0.1.0", optional = true }
hyper = { version = "1.2.0", optional = true }
hyper-util = { version = "0.1.3", features = [
  "tokio",
  "client",
  "client-legacy",
  "http2",
  "server",
], optional = true }
ipaddress = "0.1.3"
ipnet = "2.9.0"
lazy_static = "1.4.0"
libc = "0.2.153"
maxminddb = { version = "0.24.0", optional = true }
maxminddb-writer = { version = "0.1.0", optional = true }
network-interface = "1.1.1"
quinn = { version = "0.10.2", optional = true }
quinn-proto = { version = "0.10.6", optional = true }
rand = "0.8.5"
redis = { version = "0.25.1", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
], optional = true }
regex = "1.10.3"
# tokio-rustls
rustls = { version = "^0.21", optional = true }
rustls-pemfile = { version = "2.1.1", optional = true }
rustls-pki-types = { version = "1.3.1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
shadow-rs = "0.27.1"
state = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "^0.24", optional = true }
tokio-tfo = "0.2.2"
tokio-util = "0.7.10"
tower-http = { version = "0.5.2", features = ["auth", "cors"], optional = true }
tower-service = { version = "0.3.2", optional = true }
webpki-roots = { version = "0.26.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2", "ws2def", "ws2ipdef"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ipset = { version = "0.6.0", optional = true }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = [
  "upstream-dialer-socks5-support",
  "upstream-tls-support",
  "upstream-https-support",
  "upstream-quic-support",
  "upstream-dhcp-support",
  "listener-http-support",
  "listener-tls-support",
  "listener-https-support",
  "listener-quic-support",
  "plugin-matcher-domain",
  "plugin-matcher-ip",
  "plugin-matcher-maxminddb",
  "plugin-executor-cache",
  "plugin-executor-cache-redis",
  "plugin-executor-prefer",
  "api",
]
upstream-dialer-socks5-support = []
upstream-tls-support = [
  "rustls",
  "rustls-pemfile",
  "rustls-pki-types",
  "tokio-rustls",
  "webpki-roots",
]
upstream-https-support = [
  "upstream-tls-support",
  "base64",
  "http-body-util",
  "hyper",
  "hyper-util",
  "tower-service",
  "h3",
  "h3-quinn",
]
upstream-quic-support = ["upstream-tls-support", "quinn", "quinn-proto"]
upstream-dhcp-support = ["dhcproto"]
listener-http-support = ["base64"]
listener-tls-support = [
  "rustls",
  "rustls-pemfile",
  "rustls-pki-types",
  "tokio-rustls",
]
listener-https-support = [
  "listener-http-support",
  "listener-tls-support",
  "http-body-util",
  "hyper",
  "hyper-util",
  "h3",
  "h3-quinn",
]
listener-quic-support = ["listener-tls-support", "quinn", "quinn-proto"]
plugin-matcher-domain = []
plugin-matcher-ip = ["maxminddb", "maxminddb-writer"]
plugin-matcher-maxminddb = ["maxminddb"]
plugin-matcher-script = []
plugin-executor-cache = []
plugin-executor-cache-redis = ["plugin-executor-cache", "redis"]
plugin-executor-ipset = ["ipset"]
plugin-executor-prefer = []
plugin-executor-script = []
api = ["tower-http", "tower-service"]
